# hooksniff-rust

./: Cargo.toml  README.md  preserved_README.md
docs/: AdminAlertRule.md  AdminAlertsIdDelete200Response.md  AdminApi.md  AdminAuditEntry.md  AdminAuditLogResponse.md  AdminCreateAlertRequest.md  AdminFeatureFlagsGet200Response.md  AdminFeatureFlagsIdPutRequest.md  AdminFeatureFlagsPostRequest.md  AdminRevenueEntry.md  AdminRevenueResponse.md  AdminSdkUpdatePostRequest.md  AdminSettingsPut200Response.md  AdminSystemStatus.md  AdminTestWebhookRequest.md  AdminTestWebhookResponse.md  AdminUpdateAlertRequest.md  AdminUserListResponse.md  AdminUsersIdGet200Response.md  AdminUsersIdGet200ResponseEndpointsInner.md  AdminUsersIdGet200ResponseRecentDeliveriesInner.md  AdminUsersIdGet200ResponseUsageStats.md  AdminUsersIdPlanPutRequest.md  AdminUsersIdStatusPutRequest.md  AlertNotificationListResponse.md  AlertNotificationListResponseDataInner.md  AlertRule.md  AlertRuleListResponse.md  AlertsApi.md  AnalyticsApi.md  AnalyticsTrendPoint.md  AnalyticsTrendResponse.md  ApiKeyInfo.md  ApiKeysApi.md  Application.md  ApplicationsApi.md  ApplicationsIdPutRequest.md  ApplicationsPostRequest.md  ApplyTemplateRequest.md  ApplyTemplateResponse.md  (+206 more)
preserved_.git/: FETCH_HEAD  config  config.worktree  index
preserved_.git/logs/: HEAD
src/: autoconfig.rs  config.rs  connector.rs  error.rs  lib.rs  model_ext.rs  pagination.rs  request.rs  response_metadata.rs  webhook_event.rs  webhooks.rs
src/api/: alert.rs  analytics.rs  api_key.rs  application.rs  mod.rs  (+35 more)
tests/: integration_test.rs
(+321 files in other folders)
